samples/errors/generics/class_bound.lif
class Foo[T] {}
"TODO: Add generic bound once implemented";
Foo[String];
